--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -5,9 +5,9 @@ name: CRON
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-#   schedule:
-#     # * is a special character in YAML so you have to quote this string
-#     - cron:  '* * * * *'
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '* * * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
